# VDStockresearch

./: .env.example  .gitignore  DISCLAIMER.md  MASTER_PROMPT.md  PROJECT_STATE.md  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  start_app.cmd
.streamlit/: config.toml
alembic/: env.py
config/: data_sources.yaml  scoring_weights.yaml  thresholds.yaml  universe.yaml  universes.yaml
docs/: ALEMBIC_MIGRATIONS.md  DAILY_REFRESH.md  FUNDAMENTALS_REFRESH.md  INDEX_MEMBERSHIP_HISTORY.md  OFFICIAL_UNIVERSE_REFRESH.md  RENDER_DEPLOYMENT.md  ZERODHA_KITE_SETUP.md  architecture.md  banking_fundamentals_entry_guide.md  compliance.md  master_prompt_audit.md  phase6_readiness.md  phase_0_8_refinement.md  phases.md
scripts/: backup_local.ps1  health_check.ps1  import_index_membership_history.ps1  inspect_bhavcopy.py  refresh_index_membership.ps1  run_app.ps1  run_app.sh  run_daily_refresh.ps1  setup.ps1  setup.sh  sync_kite_instruments.py  test_alt_sources.py  test_nse_live.py  update_nse_index_universe.ps1  update_nse_universe.ps1
tests/: conftest.py  test_adjustments.py  test_alert_rules.py  test_banking_fundamentals.py  test_cagr.py  test_composite_scoring.py  test_cross_source_fundamentals.py  test_csv_fundamentals_provider.py  test_daily_brief.py  test_data_health_report.py  test_data_trust.py  test_db_fundamentals_provider.py  test_db_migrations.py  test_db_models.py  test_delivery_analytics.py  test_extended_ratios.py  test_fundamentals_quality.py  test_fundamentals_repository.py  test_fundamentals_summary.py  test_fundamentals_validator.py  (+38 more)
(+121 files in other folders)
