[project]
name = "stock-platform"
version = "0.1.0"
description = "Personal research & aggregator platform for Indian equities"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Black (formatter, optional if ruff format is enough) ---
[tool.black]
line-length = 100
target-version = ["py311"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
